# FaceRecogClientCpp

./: .gitignore  CMakeLists.txt  README.md
res/: config.ini  face-recog-client-bootstrapper.sh.in  face-recog-config.ini.in  face_recog_constants.h.in
src/: clock.h  config.h  face_recog_config.h  face_recog_demo.cpp  face_recog_demo.h  face_recog_demo.ui  main.cpp  qtglwebcamdemo.cpp  qtglwebcamdemo.h  qtglwebcamdemo.ui  qviewergl.cpp  qviewergl.h  webcam.cpp  webcam.h  webcam_face_pose_ex.cpp  webcam_widget.cpp  webcam_widget.h
src/face_detect/: face_detector.cpp  face_detector.h
src/face_recog_api/: face_recog_api.cpp  face_recog_api.h  face_recog_service.cpp  face_recog_service.h
